--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "root",
   "private": true,
+  "author": "Vanvelthem Sébastien",
+  "license": "AGPL-3.0",
   "devDependencies": {
     "lerna": "^3.15.0"
   }
