--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Vanvelthem Sébastien",
   "license": "AGPL-3.0",
   "devDependencies": {
+    "husky": "^3.0.0",
     "lerna": "^3.15.0"
   }
 }
