--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "devDependencies": {
     "husky": "^3.0.0",
     "lerna": "^3.15.0"
+  },
+  "scripts": {
+      "format": "npm run format --prefix=apps/api && npm run format --prefix=apps/frontend"
   }
 }
