--- a/apps/api/.env.template
+++ b/apps/api/.env.template
@@ -2,7 +2,7 @@ TYPEORM_CONNECTION = mysql
 TYPEORM_HOST = localhost
 TYPEORM_USERNAME = username
 TYPEORM_PASSWORD = password
-TYPEORM_DATABASE = claspy
+TYPEORM_DATABASE = bluewind-dev
 TYPEORM_PORT = 3306
 TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = true
