--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,9 @@
 {
-  "packages": [ "packages/*", "apps/*"],
-  "version": "0.1.0"
+    "packages": [ "packages/*", "apps/*"],
+    "version": "0.1.0",
+    "command": {
+        "run": {
+            "npmClient": "npm"
+        }
+    }
 }
