--- a/apps/api/.env.template
+++ b/apps/api/.env.template
@@ -2,11 +2,11 @@ TYPEORM_CONNECTION = mysql
 TYPEORM_HOST = localhost
 TYPEORM_USERNAME = username
 TYPEORM_PASSWORD = password
-TYPEORM_DATABASE = bluewind-dev
+TYPEORM_DATABASE = bluewind_dev
 TYPEORM_PORT = 3306
 TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = true
-TYPEORM_ENTITIES = '/**/*.entity{.ts,.js}'
+TYPEORM_ENTITIES = '**/*.entity{.ts,.js}'
 TYPEORM_MIGRATIONS=src/migration/*.ts
 TYPEORM_MIGRATIONS_DIR=migration
 TYPEORM_DRIVER_EXTRA = '{"charset": "utf8mb4"}'
