--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -46,33 +46,33 @@
         ]
     },
     "devDependencies": {
-        "@babel/core": "^7.4.5",
-        "@babel/plugin-proposal-class-properties": "^7.4.4",
+        "@babel/core": "^7.5.0",
+        "@babel/plugin-proposal-class-properties": "^7.5.0",
         "@babel/plugin-proposal-json-strings": "^7.2.0",
-        "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+        "@babel/plugin-proposal-object-rest-spread": "^7.5.2",
         "@babel/plugin-syntax-dynamic-import": "^7.2.0",
         "@babel/plugin-syntax-import-meta": "^7.2.0",
-        "@babel/plugin-transform-modules-commonjs": "^7.4.4",
-        "@babel/plugin-transform-runtime": "^7.4.4",
+        "@babel/plugin-transform-modules-commonjs": "^7.5.0",
+        "@babel/plugin-transform-runtime": "^7.5.0",
         "@babel/plugin-transform-spread": "^7.2.2",
-        "@babel/preset-env": "^7.4.5",
+        "@babel/preset-env": "^7.5.2",
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-typescript": "^7.3.3",
-        "@gfx/zopfli": "^1.0.13",
+        "@gfx/zopfli": "^1.0.14",
         "@types/dotenv": "^6.1.1",
         "@types/dotenv-webpack": "^1.7.0",
         "@types/enzyme": "^3.10.1",
         "@types/enzyme-adapter-react-16": "^1.0.5",
         "@types/history": "^4.7.2",
         "@types/jest": "^24.0.15",
-        "@types/node": "^12.0.10",
-        "@types/react": "^16.8.22",
+        "@types/node": "^12.6.1",
+        "@types/react": "^16.8.23",
         "@types/react-custom-scrollbars": "^4.0.5",
         "@types/react-dom": "^16.8.4",
         "@types/react-redux": "^7.1.1",
         "@types/react-router-dom": "^4.3.4",
         "@types/source-map-support": "^0.5.0",
-        "autoprefixer": "^9.6.0",
+        "autoprefixer": "^9.6.1",
         "babel-core": "^7.0.0-bridge.0",
         "babel-jest": "^24.8.0",
         "babel-loader": "^8.0.6",
@@ -105,7 +105,7 @@
         "jest-cli": "^24.8.0",
         "jest-enzyme": "^7.0.2",
         "jest-localstorage-mock": "^2.4.0",
-        "lint-staged": "^9.0.2",
+        "lint-staged": "^9.1.0",
         "markdown-loader": "^5.0.0",
         "mini-css-extract-plugin": "^0.7.0",
         "mkdirp": "^0.5.1",
@@ -113,14 +113,14 @@
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "postcss-loader": "^3.0.0",
         "prettier": "^1.18.2",
-        "react-hot-loader": "^4.12.1",
+        "react-hot-loader": "^4.12.5",
         "request": "^2.88.0",
         "rimraf": "^2.6.3",
         "sass-loader": "^7.1.0",
         "source-map-explorer": "^2.0.1",
         "source-map-support": "^0.5.12",
         "style-loader": "^0.23.1",
-        "terser": "^4.0.2",
+        "terser": "^4.1.2",
         "terser-webpack-plugin": "^1.3.0",
         "ts-jest": "^24.0.2",
         "ts-loader": "^6.0.4",
@@ -131,10 +131,10 @@
         "tslint-sonarts": "^1.9.0",
         "typeface-roboto": "^0.0.54",
         "typesafe-actions": "^4.4.2",
-        "typescript": "^3.5.2",
+        "typescript": "^3.5.3",
         "url-loader": "^2.0.1",
         "utility-types": "^3.7.0",
-        "webpack": "^4.35.2",
+        "webpack": "^4.35.3",
         "webpack-bundle-analyzer": "^3.3.2",
         "webpack-cli": "^3.3.5",
         "webpack-dev-middleware": "^3.7.0",
@@ -142,10 +142,10 @@
         "webpack-merge": "^4.2.1"
     },
     "dependencies": {
-        "@babel/runtime": "^7.4.5",
-        "@material-ui/core": "^4.1.3",
+        "@babel/runtime": "^7.5.2",
+        "@material-ui/core": "^4.2.0",
         "@material-ui/icons": "^4.2.1",
-        "@types/yup": "^0.26.20",
+        "@types/yup": "^0.26.21",
         "clsx": "^1.0.4",
         "core-js": "3",
         "formik": "^1.5.7",
@@ -153,13 +153,14 @@
         "history": "^4.9.0",
         "navi": "^0.12.9",
         "react": "^16.8.6",
+        "react-async-hook": "^3.3.1",
         "react-dom": "^16.8.6",
         "react-navi": "^0.12.9",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
         "react-svg": "^10.0.10",
-        "redux": "^4.0.1",
+        "redux": "^4.0.2",
         "redux-starter-kit": "^0.5.1",
         "redux-thunk": "^2.3.0",
         "tslib": "^1.10.0",
