--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,12 +35,14 @@
     "@nestjs/platform-express": "^6.5.3",
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.1.3",
+    "@types/helmet": "0.0.43",
+    "@types/sqlite3": "^3.1.5",
     "apollo-server-express": "^2.7.0",
     "class-validator": "^0.9.1",
     "envalid": "^5.0.0",
     "graphql": "^14.4.2",
     "graphql-tools": "^4.0.5",
-    "helmet": "^3.19.0",
+    "helmet": "^3.20.0",
     "mysql2": "^1.6.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.2",
@@ -54,7 +56,7 @@
     "@types/cors": "^2.8.5",
     "@types/express": "^4.17.0",
     "@types/faker": "^4.1.5",
-    "@types/graphql": "^14.2.2",
+    "@types/graphql": "^14.2.3",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.8",
     "@types/supertest": "^2.0.8",
