--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     //"moduleResolution": "node",
+    "strict": true,
     "declaration": true,
     "removeComments": true,
     "allowSyntheticDefaultImports": true,
