--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
     "clean": "rimraf dist",
     "tsc": "tsc -p . --noEmit",
     "lint": "tslint -p tsconfig.json -c tslint.json",
+    "lint:fix": "tslint -p tsconfig.json -c tslint.json --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -37,7 +38,7 @@
     "@nestjs/typeorm": "^6.1.3",
     "@types/helmet": "0.0.43",
     "@types/sqlite3": "^3.1.5",
-    "apollo-server-express": "^2.7.0",
+    "apollo-server-express": "^2.7.1",
     "class-validator": "^0.9.1",
     "envalid": "^5.0.0",
     "graphql": "^14.4.2",
@@ -92,7 +93,7 @@
     "testEnvironment": "node",
     "globals": {
       "ts-jest": {
-        "tsConfigFile": "./tsconfig.jest.json"
+        "tsConfig": "./tsconfig.jest.json"
       }
     }
   },
