--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,7 +15,7 @@
         "tsc": "tsc -p . --noEmit",
         "lint": "tslint --project './tsconfig.json'",
         "lint:fix": "tslint --project './tsconfig.json' --fix",
-        "format": "prettier --write \"./src/**/*.{ts,tsx,scss,js,json}\" \"./server/**/*.{ts,tsx,scss,js,json}\" --write \"./*.{js,json}\"",
+        "format": "prettier --write \"./src/**/*.{ts,tsx,scss,js,json}\"",
         "test": "jest --config jest.config.js",
         "test:coverage": "jest --config jest.config.js --coverage",
         "test:watch": "jest --config jest.config.js --watch",
@@ -65,9 +65,9 @@
         "@types/enzyme": "^3.10.3",
         "@types/enzyme-adapter-react-16": "^1.0.5",
         "@types/history": "^4.7.2",
-        "@types/jest": "^24.0.15",
-        "@types/node": "^12.6.8",
-        "@types/react": "^16.8.23",
+        "@types/jest": "^24.0.17",
+        "@types/node": "^12.6.9",
+        "@types/react": "^16.8.24",
         "@types/react-custom-scrollbars": "^4.0.5",
         "@types/react-dom": "^16.8.5",
         "@types/react-redux": "^7.1.1",
@@ -94,35 +94,35 @@
         "enzyme": "^3.10.0",
         "enzyme-adapter-react-16": "^1.14.0",
         "file-loader": "^4.1.0",
-        "fork-ts-checker-webpack-plugin": "^1.4.3",
+        "fork-ts-checker-webpack-plugin": "^1.5.0",
         "html-loader": "^0.5.5",
         "html-minifier": "^4.0.0",
         "html-webpack-harddisk-plugin": "^1.0.1",
         "html-webpack-include-assets-plugin": "^2.0.0",
         "html-webpack-plugin": "^3.2.0",
-        "husky": "^3.0.1",
+        "husky": "^3.0.2",
         "image-webpack-loader": "^5.0.0",
         "jest": "^24.8.0",
         "jest-cli": "^24.8.0",
-        "jest-enzyme": "^7.0.2",
+        "jest-enzyme": "^7.1.0",
         "jest-localstorage-mock": "^2.4.0",
         "lint-staged": "^9.2.1",
-        "markdown-loader": "^5.0.0",
+        "markdown-loader": "^5.1.0",
         "mini-css-extract-plugin": "^0.8.0",
         "mkdirp": "^0.5.1",
         "node-sass": "^4.12.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "postcss-loader": "^3.0.0",
         "prettier": "^1.18.2",
-        "react-hot-loader": "^4.12.9",
+        "react-hot-loader": "^4.12.10",
         "request": "^2.88.0",
         "rimraf": "^2.6.3",
         "sass-loader": "^7.1.0",
         "source-map-explorer": "^2.0.1",
-        "source-map-support": "^0.5.12",
-        "style-loader": "^0.23.1",
-        "terser": "^4.1.2",
-        "terser-webpack-plugin": "^1.3.0",
+        "source-map-support": "^0.5.13",
+        "style-loader": "^1.0.0",
+        "terser": "^4.1.3",
+        "terser-webpack-plugin": "^1.4.1",
         "ts-jest": "^24.0.2",
         "ts-loader": "^6.0.4",
         "ts-node": "^8.3.0",
@@ -135,8 +135,8 @@
         "typescript": "^3.5.3",
         "url-loader": "^2.1.0",
         "utility-types": "^3.7.0",
-        "webpack": "^4.38.0",
-        "webpack-bundle-analyzer": "^3.3.2",
+        "webpack": "^4.39.1",
+        "webpack-bundle-analyzer": "^3.4.1",
         "webpack-cli": "^3.3.6",
         "webpack-dev-middleware": "^3.7.0",
         "webpack-dev-server": "^3.7.2",
@@ -145,7 +145,7 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.5.5",
-        "@material-ui/core": "^4.2.1",
+        "@material-ui/core": "^4.3.1",
         "@material-ui/icons": "^4.2.1",
         "@types/yup": "^0.26.22",
         "clsx": "^1.0.4",
@@ -160,9 +160,9 @@
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
-        "react-svg": "^10.0.12",
+        "react-svg": "^10.0.14",
         "redux": "^4.0.4",
-        "redux-starter-kit": "^0.6.2",
+        "redux-starter-kit": "^0.6.3",
         "redux-thunk": "^2.3.0",
         "tslib": "^1.10.0",
         "use-react-router": "^1.0.7",
