--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -62,8 +62,8 @@
         "@types/enzyme-adapter-react-16": "^1.0.5",
         "@types/history": "^4.7.2",
         "@types/jest": "^24.0.17",
-        "@types/node": "^12.7.0",
-        "@types/react": "^16.8.24",
+        "@types/node": "^12.7.1",
+        "@types/react": "^16.9.1",
         "@types/react-dom": "^16.8.5",
         "@types/react-redux": "^7.1.1",
         "@types/react-router-dom": "^4.3.4",
@@ -73,7 +73,7 @@
         "babel-core": "^7.0.0-bridge.0",
         "babel-jest": "^24.8.0",
         "babel-loader": "^8.0.6",
-        "babel-preset-react-app": "^9.0.0",
+        "babel-preset-react-app": "^9.0.1",
         "brotli-webpack-plugin": "^1.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "compression-webpack-plugin": "^3.0.0",
@@ -89,14 +89,14 @@
         "duplicate-package-checker-webpack-plugin": "^3.0.0",
         "enzyme": "^3.10.0",
         "enzyme-adapter-react-16": "^1.14.0",
-        "file-loader": "^4.1.0",
+        "file-loader": "^4.2.0",
         "fork-ts-checker-webpack-plugin": "^1.5.0",
         "html-loader": "^0.5.5",
         "html-minifier": "^4.0.0",
         "html-webpack-harddisk-plugin": "^1.0.1",
         "html-webpack-include-assets-plugin": "^2.0.0",
         "html-webpack-plugin": "^3.2.0",
-        "husky": "^3.0.2",
+        "husky": "^3.0.3",
         "image-webpack-loader": "^5.0.0",
         "jest": "^24.8.0",
         "jest-cli": "^24.8.0",
@@ -113,7 +113,7 @@
         "react-hot-loader": "^4.12.10",
         "request": "^2.88.0",
         "rimraf": "^2.6.3",
-        "sass-loader": "^7.1.0",
+        "sass-loader": "^7.2.0",
         "source-map-explorer": "^2.0.1",
         "source-map-support": "^0.5.13",
         "style-loader": "^1.0.0",
@@ -135,21 +135,24 @@
         "webpack-bundle-analyzer": "^3.4.1",
         "webpack-cli": "^3.3.6",
         "webpack-dev-middleware": "^3.7.0",
-        "webpack-dev-server": "^3.7.2",
+        "webpack-dev-server": "^3.8.0",
+        "webpack-manifest-plugin": "^2.0.4",
         "webpack-merge": "^4.2.1",
-        "webpack-stats-plugin": "^0.3.0"
+        "webpack-pwa-manifest": "^4.0.0",
+        "webpack-stats-plugin": "^0.3.0",
+        "with-default-props": "^0.2.0"
     },
     "dependencies": {
         "@babel/runtime": "^7.5.5",
         "@sindresorhus/is": "^1.0.0",
         "core-js": "3",
         "formik": "^1.5.8",
-        "fp-ts": "^2.0.4",
+        "fp-ts": "^2.0.5",
         "history": "^4.9.0",
         "io-ts": "^2.0.1",
         "io-ts-promise": "^2.0.0",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
+        "react": "^16.9.0",
+        "react-dom": "^16.9.0",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
@@ -158,8 +161,6 @@
         "redux-thunk": "^2.3.0",
         "tslib": "^1.10.0",
         "use-react-router": "^1.0.7",
-        "webpack-manifest-plugin": "^2.0.4",
-        "webpack-pwa-manifest": "^4.0.0",
         "yup": "^0.27.0"
     }
 }
