--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -146,6 +146,7 @@
         "@babel/runtime": "^7.5.5",
         "@sindresorhus/is": "^1.0.0",
         "core-js": "3",
+        "date-fns": "^1.30.1",
         "formik": "^1.5.8",
         "fp-ts": "^2.0.5",
         "history": "^4.9.0",
