--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -56,6 +56,7 @@
         "@babel/preset-typescript": "^7.3.3",
         "@babel/runtime-corejs3": "^7.5.5",
         "@gfx/zopfli": "^1.0.14",
+        "@types/date-fns": "^2.6.0",
         "@types/dotenv": "^6.1.1",
         "@types/dotenv-webpack": "^1.7.0",
         "@types/enzyme": "^3.10.3",
@@ -146,7 +147,7 @@
         "@babel/runtime": "^7.5.5",
         "@sindresorhus/is": "^1.0.0",
         "core-js": "3",
-        "date-fns": "^1.30.1",
+        "date-fns": "^2.0.0-beta.4",
         "formik": "^1.5.8",
         "fp-ts": "^2.0.5",
         "history": "^4.9.0",
