--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,14 @@
 {
-    "packages": [ "packages/*", "apps/*"],
     "version": "0.1.0",
+    "packages": [
+      "packages/*",
+      "apps/*"
+    ],
     "command": {
         "run": {
             "npmClient": "yarn"
         }
-    }
+    },
+    "useWorkspaces": true,
+    "npmClient": "yarn"
 }
