--- a/package.json
+++ b/package.json
@@ -1,20 +1,53 @@
 {
-  "name": "root",
+  "name": "bluewind-monorepo",
   "private": true,
   "author": "Vanvelthem Sébastien",
-  "license": "AGPL-3.0",
-  "devDependencies": {
-    "husky": "^3.0.1",
-    "lerna": "^3.16.4"
+  "license": "MIT",
+  "workspaces": {
+    "packages": [
+      "apps/*",
+      "packages/*"
+    ],
+    "nohoist": [
+      "**/@nestjs",
+      "**/@nestjs/**"
+    ]
   },
   "scripts": {
-      "format": "npm run format --prefix=apps/api && npm run format --prefix=apps/frontend",
-      "lint:fix": "npm run lint:fix --prefix=apps/api && npm run lint:fix --prefix=apps/frontend"
+    "bootstrap": "lerna bootstrap",
+    "clean": "rimraf packages/**/dist",
+    "lint": "eslint ./apps/web --ext .ts,.tsx",
+    "lint:fix": "eslint ./apps/web --ext .ts,.tsx --fix"
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.17",
+    "@types/node": "^12.7.1",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "1.13.0",
+    "eslint": "^6.1.0",
+    "eslint-config-react-app": "^5.0.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-loader": "2.2.1",
+    "eslint-plugin-flowtype": "4.2.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "jest": "^24.8.0",
+    "husky": "^3.0.3",
+    "lerna": "^3.16.4",
+    "prettier": "^1.18.2",
+    "rimraf": "^2.6.3",
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.3"
   },
   "husky": {
     "hooks": {
       "post-commit": "git diff --name-only HEAD^ | xargs git add",
-      "pre-commit": "npm run format"
+      "pre-commit": "npm run lint:fix"
     }
   }
 }
