--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,7 +13,7 @@
     "prestart:prod": "rimraf dist && npm run build",
     "start:prod": "node dist/main.js",
     "clean": "rimraf dist",
-    "tsc": "tsc -p . --noEmit",
+    "typecheck": "tsc -p . --noEmit",
     "lint": "tslint -p tsconfig.json -c tslint.json",
     "lint:fix": "tslint -p tsconfig.json -c tslint.json --fix",
     "test": "jest",
@@ -36,7 +36,7 @@
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.1.3",
     "apollo-server-express": "^2.8.1",
-    "class-validator": "^0.9.1",
+    "class-validator": "^0.10.0",
     "envalid": "^5.0.0",
     "graphql": "^14.4.2",
     "graphql-tools": "^4.0.5",
@@ -56,7 +56,7 @@
     "@types/faker": "^4.1.5",
     "@types/graphql": "^14.2.3",
     "@types/jest": "^24.0.17",
-    "@types/node": "^12.6.9",
+    "@types/node": "^12.7.1",
     "@types/supertest": "^2.0.8",
     "@types/helmet": "0.0.43",
     "@types/sqlite3": "^3.1.5",
