--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,10 +9,8 @@
         "source-map-explorer": "source-map-explorer ./dist/main.*.js ./dist/main.*.js.map",
         "stats": "yarn build && webpack-bundle-analyzer dist/.webpack-stats.json",
         "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --hot --config config/webpack.development.js",
-        "clean:all": "run-p clean:build clean:dist",
-        "clean:build": "rimraf build",
-        "clean:dist": "rimraf dist",
-        "tsc": "tsc -p . --noEmit",
+        "clean": "rimraf build dist",
+        "typecheck": "tsc -p . --noEmit",
         "lint": "tslint --project './tsconfig.json'",
         "lint:fix": "tslint --project './tsconfig.json' --fix",
         "format": "prettier --write \"./src/**/*.{ts,tsx,scss,js,json}\"",
@@ -66,8 +64,8 @@
         "@types/enzyme-adapter-react-16": "^1.0.5",
         "@types/history": "^4.7.2",
         "@types/jest": "^24.0.17",
-        "@types/node": "^12.6.9",
-        "@types/react": "^16.8.24",
+        "@types/node": "^12.7.1",
+        "@types/react": "^16.9.1",
         "@types/react-custom-scrollbars": "^4.0.5",
         "@types/react-dom": "^16.8.5",
         "@types/react-redux": "^7.1.1",
@@ -77,7 +75,7 @@
         "babel-core": "^7.0.0-bridge.0",
         "babel-jest": "^24.8.0",
         "babel-loader": "^8.0.6",
-        "babel-preset-react-app": "^9.0.0",
+        "babel-preset-react-app": "^9.0.1",
         "brotli-webpack-plugin": "^1.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "compression-webpack-plugin": "^3.0.0",
@@ -85,7 +83,7 @@
         "copy-webpack-plugin": "^5.0.4",
         "cross-env": "^5.2.0",
         "css-hot-loader": "^1.4.4",
-        "css-loader": "^3.1.0",
+        "css-loader": "^3.2.0",
         "cssnano": "^4.1.10",
         "dotenv": "^8.0.0",
         "dotenv-expand": "^5.1.0",
@@ -93,14 +91,14 @@
         "duplicate-package-checker-webpack-plugin": "^3.0.0",
         "enzyme": "^3.10.0",
         "enzyme-adapter-react-16": "^1.14.0",
-        "file-loader": "^4.1.0",
+        "file-loader": "^4.2.0",
         "fork-ts-checker-webpack-plugin": "^1.5.0",
         "html-loader": "^0.5.5",
         "html-minifier": "^4.0.0",
         "html-webpack-harddisk-plugin": "^1.0.1",
         "html-webpack-include-assets-plugin": "^2.0.0",
         "html-webpack-plugin": "^3.2.0",
-        "husky": "^3.0.2",
+        "husky": "^3.0.3",
         "image-webpack-loader": "^5.0.0",
         "jest": "^24.8.0",
         "jest-cli": "^24.8.0",
@@ -117,11 +115,11 @@
         "react-hot-loader": "^4.12.10",
         "request": "^2.88.0",
         "rimraf": "^2.6.3",
-        "sass-loader": "^7.1.0",
+        "sass-loader": "^7.2.0",
         "source-map-explorer": "^2.0.1",
         "source-map-support": "^0.5.13",
         "style-loader": "^1.0.0",
-        "terser": "^4.1.3",
+        "terser": "^4.1.4",
         "terser-webpack-plugin": "^1.4.1",
         "ts-jest": "^24.0.2",
         "ts-loader": "^6.0.4",
@@ -139,13 +137,13 @@
         "webpack-bundle-analyzer": "^3.4.1",
         "webpack-cli": "^3.3.6",
         "webpack-dev-middleware": "^3.7.0",
-        "webpack-dev-server": "^3.7.2",
+        "webpack-dev-server": "^3.8.0",
         "webpack-merge": "^4.2.1",
         "webpack-stats-plugin": "^0.3.0"
     },
     "dependencies": {
         "@babel/runtime": "^7.5.5",
-        "@material-ui/core": "^4.3.1",
+        "@material-ui/core": "^4.3.2",
         "@material-ui/icons": "^4.2.1",
         "@types/yup": "^0.26.22",
         "clsx": "^1.0.4",
@@ -154,13 +152,13 @@
         "formik-material-ui": "^0.0.20",
         "history": "^4.9.0",
         "outdated-browser-rework": "^2.9.0",
-        "react": "^16.8.6",
+        "react": "^16.9.0",
         "react-async-hook": "^3.4.0",
-        "react-dom": "^16.8.6",
+        "react-dom": "^16.9.0",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
-        "react-svg": "^10.0.14",
+        "react-svg": "^10.0.17",
         "redux": "^4.0.4",
         "redux-starter-kit": "^0.6.3",
         "redux-thunk": "^2.3.0",
