--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,13 +2,14 @@
   "name": "@bluewind/web",
   "author": "Vanvelthem Sébastien",
   "license": "MIT",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "build": "cross-env NODE_ENV=production BABEL_ENV=production webpack --mode production --config webpack.production.js",
     "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --hot --config webpack.development.js",
     "clean": "rimraf build dist",
     "typecheck": "tsc -p . --noEmit",
-    "format": "prettier --write \"./src/**/*.{ts,tsx,scss,js,json}\" \"./server/**/*.{ts,tsx,scss,js,json}\" --write \"./*.{js,json}\"",
+    "format": "prettier --write \"./src/**/*.{ts,tsx,scss,js,json}\"",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "test": "jest --config jest.config.js",
@@ -61,6 +62,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-emotion": "^10.0.15",
     "babel-preset-react-app": "^9.0.1",
     "brotli-webpack-plugin": "^1.1.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -75,9 +77,11 @@
     "dotenv-expand": "^5.1.0",
     "dotenv-webpack": "^1.7.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^6.1.0",
-    "eslint-config-react-app": "^5.0.0",
     "eslint-config-prettier": "^6.0.0",
+    "eslint-config-react-app": "^5.0.0",
     "eslint-loader": "2.2.1",
     "eslint-plugin-flowtype": "4.2.0",
     "eslint-plugin-import": "2.18.2",
@@ -85,8 +89,6 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
     "file-loader": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^1.5.0",
     "html-loader": "^0.5.5",
@@ -136,6 +138,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
+    "@emotion/core": "^10.0.15",
+    "@emotion/styled": "^10.0.15",
     "@sindresorhus/is": "^1.0.0",
     "core-js": "3",
     "date-fns": "^2.0.0-beta.4",
