--- a/.prettierrc
+++ b/.prettierrc
@@ -8,7 +8,13 @@
     {
       "files": "*.scss",
       "options": {
-        "printWidth": 140
+        "printWidth": 140,
+        "tabWidth": 2,
+      }
+    },{
+      "files": "*.json",
+      "options": {
+         "tabWidth": 2,
       }
     }
   ]
