--- a/apps/web/.babelrc
+++ b/apps/web/.babelrc
@@ -1,13 +1,21 @@
 {
     "presets": [
-        ["@babel/preset-env", {
-            useBuiltIns: "usage", // or "entry"
-            corejs: 3,
-            "debug": true
-        }],
+        [
+            "@babel/preset-env",
+            {
+                "useBuiltIns": "usage",
+                "corejs": 3,
+                "debug": true
+            }
+        ],
         "@babel/react"
     ],
     "env": {
+        "production": {
+            "plugins": [
+                "emotion"
+            ]
+        },
         "development": {
             "presets": [
                 [
@@ -18,7 +26,12 @@
                 ]
             ],
             "plugins": [
-                // For dev
+                [
+                    "emotion",
+                    {
+                        "sourceMap": true
+                    }
+                ],
                 "react-hot-loader/babel"
             ]
         },
@@ -45,14 +58,10 @@
         }
     },
     "plugins": [
-
-        // Stage 3
         "@babel/plugin-syntax-dynamic-import",
         "@babel/plugin-syntax-import-meta",
         "@babel/plugin-proposal-class-properties",
         "@babel/plugin-proposal-json-strings",
-
-        // Stage 4
-        "@babel/plugin-proposal-object-rest-spread",
+        "@babel/plugin-proposal-object-rest-spread"
     ]
 }
