--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "husky": {
     "hooks": {
       "post-commit": "git diff --name-only HEAD^ | xargs git add",
-      "pre-commit": "npm run lint:fix"
+      "pre-commit": "lerna run lint:fix"
     }
   }
 }
