--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -148,8 +148,10 @@
     "history": "^4.9.0",
     "io-ts": "^2.0.1",
     "io-ts-promise": "^2.0.0",
+    "loglevel": "^1.6.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-error-boundary": "^1.2.5",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
