added stmux script

--- a/package.json
+++ b/package.json
@@ -14,31 +14,15 @@
     ]
   },
   "scripts": {
-    "bootstrap": "lerna bootstrap"
+    "bootstrap": "lerna bootstrap",
+    "start:dev": "stmux --mouse -- [ [ \"npm run web:start:dev\" : \"npm run server:start:dev\"  ]  ]",
+    "server:start:dev": "cd apps/api && yarn start:dev",
+    "web:start:dev": "cd apps/web && yarn start"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.17",
-    "@types/node": "^12.7.1",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "1.13.0",
-    "eslint": "^6.1.0",
-    "eslint-config-react-app": "^5.0.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-loader": "2.2.1",
-    "eslint-plugin-flowtype": "4.2.0",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
-    "jest": "^24.8.0",
     "husky": "^3.0.3",
     "lerna": "^3.16.4",
-    "prettier": "^1.18.2",
-    "rimraf": "^2.6.3",
-    "supertest": "^4.0.2",
-    "ts-jest": "^24.0.2",
-    "typescript": "^3.5.3"
+    "stmux": "^1.7.1"
   },
   "husky": {
     "hooks": {
