added stmux script

--- a/apps/api/.env.template
+++ b/apps/api/.env.template
@@ -1,13 +1,26 @@
-TYPEORM_CONNECTION = mysql
-TYPEORM_HOST = localhost
-TYPEORM_USERNAME = username
-TYPEORM_PASSWORD = password
-TYPEORM_DATABASE = bluewind_dev
-TYPEORM_PORT = 3306
+#
+# TypeORM environment options
+# @link https://github.com/typeorm/typeorm/blob/master/docs/using-ormconfig.md
+#
+
+TYPEORM_CONNECTION = sqlite
+TYPEORM_DATABASE = data/bluewind.sqlite
+
+# You'll probably want to mysql -u root -p -e 'create database qinterview';
+#TYPEORM_CONNECTION = mysql
+#TYPEORM_HOST = localhost
+#TYPEORM_USERNAME = bluewind_user
+#TYPEORM_PASSWORD = ***
+#TYPEORM_DATABASE = bluewdind_dev
+#TYPEORM_PORT = 3306
+#TYPEORM_DRIVER_EXTRA = '{"charset": "utf8mb4"}'
+
+# Set it to false if you don't want automatic
+# schema synchronization on startup
 TYPEORM_SYNCHRONIZE = true
 TYPEORM_LOGGING = true
 TYPEORM_ENTITIES = '**/*.entity{.ts,.js}'
-TYPEORM_MIGRATIONS=src/migration/*.ts
-TYPEORM_MIGRATIONS_DIR=migration
-TYPEORM_DRIVER_EXTRA = '{"charset": "utf8mb4"}'
+TYPEORM_MIGRATIONS = src/migration/*.ts
+TYPEORM_MIGRATIONS_DIR = migration
+
 
