--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -42,6 +42,7 @@
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime-corejs3": "^7.5.5",
     "@gfx/zopfli": "^1.0.14",
+    "@hot-loader/react-dom": "^16.9.0-4.12.11",
     "@types/date-fns": "^2.6.0",
     "@types/dotenv": "^6.1.1",
     "@types/dotenv-webpack": "^1.7.0",
@@ -148,10 +149,12 @@
     "history": "^4.9.0",
     "io-ts": "^2.0.1",
     "io-ts-promise": "^2.0.0",
+    "ky": "^0.11.2",
     "loglevel": "^1.6.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-error-boundary": "^1.2.5",
+    "react-final-form": "^6.3.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
