--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -90,6 +90,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-sonarjs": "^0.4.0",
     "file-loader": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^1.5.0",
     "html-loader": "^0.5.5",
@@ -109,7 +110,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.18.2",
-    "react-hot-loader": "^4.12.10",
+    "react-hot-loader": "^4.12.11",
     "request": "^2.88.0",
     "rimraf": "^2.6.3",
     "sass-loader": "^7.2.0",
@@ -149,7 +150,7 @@
     "history": "^4.9.0",
     "io-ts": "^2.0.1",
     "io-ts-promise": "^2.0.0",
-    "ky": "^0.11.2",
+    "ky": "^0.12.0",
     "loglevel": "^1.6.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
