--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -55,11 +55,11 @@
     "@types/express": "^4.17.0",
     "@types/faker": "^4.1.5",
     "@types/graphql": "^14.2.3",
+    "@types/helmet": "0.0.43",
     "@types/jest": "^24.0.17",
     "@types/node": "^12.7.1",
-    "@types/supertest": "^2.0.8",
-    "@types/helmet": "0.0.43",
     "@types/sqlite3": "^3.1.5",
+    "@types/supertest": "^2.0.8",
     "concurrently": "^4.1.1",
     "cross-env": "^5.2.0",
     "faker": "^4.1.0",
@@ -75,6 +75,7 @@
     "tsconfig-paths": "3.8.0",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3",
+    "utility-types": "^3.7.0",
     "wait-on": "^3.3.0"
   },
   "jest": {
