--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -91,6 +91,7 @@
         "duplicate-package-checker-webpack-plugin": "^3.0.0",
         "enzyme": "^3.10.0",
         "enzyme-adapter-react-16": "^1.14.0",
+        "eslint-plugin-sonarjs": "^0.4.0",
         "file-loader": "^4.2.0",
         "fork-ts-checker-webpack-plugin": "^1.5.0",
         "html-loader": "^0.5.5",
