--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -127,7 +127,7 @@
     "typescript": "^3.5.3",
     "url-loader": "^2.1.0",
     "utility-types": "^3.7.0",
-    "webpack": "^4.39.1",
+    "webpack": "^4.39.2",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-middleware": "^3.7.0",
@@ -143,6 +143,9 @@
     "@emotion/core": "^10.0.15",
     "@emotion/styled": "^10.0.15",
     "@sindresorhus/is": "^1.0.0",
+    "camelcase-keys": "^6.0.1",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.10.0",
     "core-js": "3",
     "date-fns": "^2.0.0-beta.4",
     "formik": "^1.5.8",
