--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -19,6 +19,7 @@
     "jsx-a11y/anchor-is-valid": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
+    "@typescript-eslint/interface-name-prefix": "warn",
     "@typescript-eslint/camelcase": ["error", { "properties": "never", "ignoreDestructuring": true }],
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-unused-vars": "off",
@@ -26,7 +27,7 @@
     "@typescript-eslint/prefer-interface": "off",
     "sonarjs/cognitive-complexity": "error",
     "sonarjs/no-useless-catch": "error",
-    "sonarjs/no-identical-expressions": "error"
+    "sonarjs/no-identical-expressions": "warn"
   },
   "overrides": [
     {
