--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "start:dev": "stmux --mouse -- [ [ \"npm run web:start:dev\" : \"npm run server:start:dev\"  ]  ]",
+    "start:dev": "stmux --mouse -- [ [ \"yarn run web:start:dev\" : \"yarn run server:start:dev\"  ]  ]",
     "server:start:dev": "cd apps/api && yarn start:dev",
     "web:start:dev": "cd apps/web && yarn start"
   },
@@ -28,7 +28,7 @@
     "hooks": {
       "post-commit": "git diff --name-only HEAD^ | xargs git add",
       "pre-commit": "lerna run prettier",
-      "pre-push": "lerna run lint"
+      "pre-push": "lerna run typecheck && lerna run lint"
     }
   }
 }
