--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -57,8 +57,8 @@
     "@types/react-router-dom": "^4.3.4",
     "@types/source-map-support": "^0.5.0",
     "@types/yup": "^0.26.22",
-    "@typescript-eslint/eslint-plugin": "^1.13.0",
-    "@typescript-eslint/parser": "1.13.0",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "2.0.0",
     "autoprefixer": "^9.6.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
@@ -82,7 +82,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
-    "eslint-config-react-app": "^5.0.0",
+    "eslint-config-react-app": "^5.0.1",
     "eslint-loader": "2.2.1",
     "eslint-plugin-flowtype": "4.2.0",
     "eslint-plugin-import": "2.18.2",
@@ -112,7 +112,7 @@
     "prettier": "^1.18.2",
     "react-hot-loader": "^4.12.11",
     "request": "^2.88.0",
-    "rimraf": "^2.6.3",
+    "rimraf": "^2.7.0",
     "sass-loader": "^7.2.0",
     "source-map-explorer": "^2.0.1",
     "source-map-support": "^0.5.13",
@@ -122,6 +122,7 @@
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
+    "tslib": "^1.10.0",
     "typeface-muli": "0.0.71",
     "typesafe-actions": "^4.4.2",
     "typescript": "^3.5.3",
