--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         /* Basic Options */
         // - es2017: assuming babel will do the job afterwards
-        "target": "es2017",                       /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
+        "target": "es2016",                       /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
         // - es2015/esnext allows tree shaking later on
         "module": "esnext",                       /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
         "lib": ["dom", "es2018"],                 /* Specify library files to be included in the compilation. */
@@ -58,7 +58,7 @@
         "allowSyntheticDefaultImports": true,     /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
         "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
 
-        "importHelpers": false,                    /* Import emit helpers from 'tslib'. */
+        "importHelpers": true,                     /* Import emit helpers from 'tslib'. */
         "noEmitHelpers": false,                    /* Emit helpers */
 
         // "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
@@ -74,6 +74,6 @@
         "emitDecoratorMetadata": true,             /* Enables experimental support for emitting type metadata for decorators. */
 
         "incremental": true
-    },
-    "exclude": ["node_modules"]
+    }
+    //"exclude": ["node_modules"]
 }
