--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,6 +4,7 @@
   "description": "Classroom appplication backend",
   "author": "Vanvelthem Sébastien",
   "license": "AGPL-3.0",
+  "private":true,
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
