--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -36,6 +36,7 @@
     "@nestjs/platform-express": "^6.5.3",
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.1.3",
+    "@sindresorhus/is": "^1.0.0",
     "apollo-server-express": "^2.8.1",
     "class-validator": "^0.10.0",
     "envalid": "^5.0.0",
