--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -150,7 +150,7 @@
     "class-validator": "^0.10.0",
     "core-js": "3",
     "date-fns": "^2.0.0-beta.4",
-    "formik": "^1.5.8",
+    "final-form": "^4.18.5",
     "fp-ts": "^2.0.5",
     "history": "^4.9.0",
     "io-ts": "^2.0.1",
