--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "start:dev": "stmux --mouse -- [ [ \"yarn run web:start:dev\" : \"yarn run server:start:dev\"  ]  ]",
-    "server:start:dev": "cd apps/api && yarn start:dev",
-    "web:start:dev": "cd apps/web && yarn start"
+    "lint": "lerna run lint --parallel",
+    "lint:fix": "lerna run lint:fix --parallel",
+    "start:dev": "stmux --mouse -- [ [ \"yarn run api:start:dev\" : \"yarn run web:start:dev\"  ]  ]",
+    "api:start:dev": "lerna run --scope @bluewind/api --stream start:dev",
+    "web:start:dev": "lerna run --scope @bluewind/web --stream start"
   },
   "devDependencies": {
     "husky": "^3.0.3",
