--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -25,6 +25,7 @@
     "no-throw-literal": "error",
     "jsx-a11y/href-no-hash": "off",
     "jsx-a11y/anchor-is-valid": "off",
+    "@typescript-eslint/no-use-before-define": "warn",
     "@typescript-eslint/interface-name-prefix": "warn",
     "@typescript-eslint/camelcase": ["error", { "properties": "never", "ignoreDestructuring": true }],
     "@typescript-eslint/explicit-function-return-type": "off",
