--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -144,6 +144,8 @@
     "@babel/runtime": "^7.5.5",
     "@emotion/core": "^10.0.15",
     "@emotion/styled": "^10.0.15",
+    "@material-ui/core": "^4.3.2",
+    "@material-ui/icons": "^4.2.1",
     "@sindresorhus/is": "^1.0.0",
     "camelcase-keys": "^6.0.1",
     "class-transformer": "^0.2.3",
@@ -167,6 +169,7 @@
     "redux": "^4.0.4",
     "redux-starter-kit": "^0.6.3",
     "redux-thunk": "^2.3.0",
+    "snakecase-keys": "^3.1.0",
     "tslib": "^1.10.0",
     "use-react-router": "^1.0.7",
     "yup": "^0.27.0"
