--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -6,8 +6,8 @@
         // - es2015/esnext allows tree shaking later on
         "module": "esnext",                       /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
         "lib": ["dom", "es2018"],                 /* Specify library files to be included in the compilation. */
-        "allowJs": false,                          /* Allow javascript files to be compiled. */
-        "checkJs": false,                         /* Report errors in .js files. */
+        "allowJs": true,                          /* Allow javascript files to be compiled. */
+        "checkJs": true,                         /* Report errors in .js files. */
         "jsx": "react",                           /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
         "declaration": false,                     /* Generates corresponding '.d.ts' file. */
         // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
@@ -75,6 +75,9 @@
 
         "incremental": true
     },
+    "include": [
+      "./src"
+    ],
     "exclude": [
       "node_modules"
     ]
