--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lerna": "lerna",
     "lint": "lerna run lint --parallel --stream",
     "lint:fix": "lerna run lint:fix --parallel",
+    "test": "lerna run test --parallel --stream",
     "start:dev": "stmux --mouse -- [ [ \"yarn api:start:dev\" : \"yarn web:start:dev\"  ]  ]",
     "api:start:dev": "cd apps/api && yarn start:dev",
     "web:start:dev": "cd apps/web && yarn start",
