--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -50,10 +50,10 @@
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/history": "^4.7.2",
-    "@types/jest": "^24.0.17",
+    "@types/jest": "^24.0.18",
     "@types/node": "^12.7.2",
     "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.8.5",
+    "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^4.3.4",
     "@types/source-map-support": "^0.5.0",
@@ -69,20 +69,20 @@
     "brotli-webpack-plugin": "^1.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^3.0.0",
-    "concurrently": "^4.1.1",
+    "concurrently": "^4.1.2",
     "copy-webpack-plugin": "^5.0.4",
     "cross-env": "^5.2.0",
     "css-hot-loader": "^1.4.4",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.1.0",
     "dotenv-expand": "^5.1.0",
     "dotenv-webpack": "^1.7.0",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.0.0",
+    "eslint": "^6.2.1",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-config-react-app": "^5.0.1",
     "eslint-loader": "2.2.1",
     "eslint-plugin-flowtype": "4.2.0",
@@ -114,12 +114,12 @@
     "react-hot-loader": "^4.12.11",
     "request": "^2.88.0",
     "rimraf": "^3.0.0",
-    "sass-loader": "^7.2.0",
+    "sass-loader": "^7.3.1",
     "source-map-explorer": "^2.0.1",
     "source-map-support": "^0.5.13",
     "stats-webpack-plugin": "^0.7.0",
     "style-loader": "^1.0.0",
-    "terser": "^4.1.4",
+    "terser": "^4.2.0",
     "terser-webpack-plugin": "^1.4.1",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
@@ -132,13 +132,13 @@
     "utility-types": "^3.7.0",
     "webpack": "^4.39.2",
     "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-cli": "^3.3.6",
+    "webpack-cli": "^3.3.7",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-dev-server": "^3.8.0",
     "webpack-manifest-plugin": "^2.0.4",
     "webpack-merge": "^4.2.1",
     "webpack-pwa-manifest": "^4.0.0",
-    "with-default-props": "^0.2.0"
+    "with-default-props": "^0.2.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
@@ -149,7 +149,7 @@
     "@sindresorhus/is": "^1.0.0",
     "camelcase-keys": "^6.0.1",
     "core-js": "3",
-    "date-fns": "^2.0.0-beta.4",
+    "date-fns": "^2.0.0",
     "final-form": "^4.18.5",
     "fp-ts": "^2.0.5",
     "history": "^4.9.0",
