--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -42,6 +42,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime-corejs3": "^7.5.5",
+    "@fortawesome/fontawesome-free": "^5.10.2",
     "@gfx/zopfli": "^1.0.14",
     "@hot-loader/react-dom": "^16.9.0",
     "@types/date-fns": "^2.6.0",
