--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -109,9 +109,11 @@
     "mkdirp": "^0.5.1",
     "modern-normalize": "^0.5.0",
     "node-sass": "^4.12.0",
+    "null-loader": "^3.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.18.2",
+    "raw-loader": "^3.1.0",
     "react-hot-loader": "^4.12.12",
     "request": "^2.88.0",
     "rimraf": "^3.0.0",
