--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,44 +29,43 @@
     "graphql:generate-typings": "ts-node -r tsconfig-paths/register ./src/generate-typings.ts"
   },
   "dependencies": {
-    "@nestjs/common": "^6.5.3",
-    "@nestjs/core": "^6.5.3",
-    "@nestjs/graphql": "^6.4.2",
+    "@nestjs/common": "^6.6.7",
+    "@nestjs/core": "^6.6.7",
+    "@nestjs/graphql": "^6.5.1",
     "@nestjs/passport": "^6.1.0",
-    "@nestjs/platform-express": "^6.5.3",
+    "@nestjs/platform-express": "^6.6.7",
     "@nestjs/swagger": "^3.1.0",
     "@nestjs/typeorm": "^6.1.3",
     "@sindresorhus/is": "^1.0.0",
-    "apollo-server-express": "^2.9.0",
+    "apollo-server-express": "^2.9.3",
     "class-validator": "^0.10.0",
     "envalid": "^5.0.0",
-    "graphql": "^14.5.3",
+    "graphql": "^14.5.4",
     "graphql-tools": "^4.0.5",
-    "helmet": "^3.20.0",
-    "mysql2": "^1.6.5",
+    "helmet": "^3.21.0",
+    "mysql2": "^1.7.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.2",
+    "rxjs": "^6.5.3",
     "swagger-ui-express": "^4.0.7",
     "type-graphql": "^0.17.5",
     "typeorm": "^0.2.18",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
-    "@nestjs/testing": "^6.5.3",
+    "@nestjs/testing": "^6.6.7",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.1",
     "@types/faker": "^4.1.5",
-    "@types/graphql": "^14.5.0",
     "@types/helmet": "0.0.44",
     "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.2",
+    "@types/node": "^12.7.4",
     "@types/sqlite3": "^3.1.5",
     "@types/supertest": "^2.0.8",
     "concurrently": "^4.1.2",
-    "cross-env": "^5.2.0",
+    "cross-env": "^5.2.1",
     "faker": "^4.1.0",
     "jest": "^24.9.0",
-    "nodemon": "^1.19.1",
+    "nodemon": "^1.19.2",
     "prettier": "^1.18.2",
     "rimraf": "^3.0.0",
     "sqlite3": "^4.1.0",
@@ -76,7 +75,7 @@
     "ts-node": "^8.3.0",
     "tsconfig-paths": "3.8.0",
     "tslint": "^5.19.0",
-    "typescript": "^3.5.3",
+    "typescript": "3.5.2",
     "utility-types": "^3.7.0",
     "wait-on": "^3.3.0"
   },
