--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -45,34 +45,33 @@
     "@fortawesome/fontawesome-free": "^5.10.2",
     "@gfx/zopfli": "^1.0.14",
     "@hot-loader/react-dom": "^16.9.0",
-    "@types/date-fns": "^2.6.0",
     "@types/dotenv": "^6.1.1",
     "@types/dotenv-webpack": "^1.7.0",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/history": "^4.7.3",
     "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.2",
+    "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.2",
     "@types/react-router-dom": "^4.3.5",
     "@types/source-map-support": "^0.5.0",
     "@types/yup": "^0.26.23",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "2.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.1.0",
+    "@typescript-eslint/parser": "2.1.0",
     "autoprefixer": "^9.6.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
-    "babel-plugin-emotion": "^10.0.16",
+    "babel-plugin-emotion": "^10.0.17",
     "babel-preset-react-app": "^9.0.1",
     "brotli-webpack-plugin": "^1.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^3.0.0",
     "concurrently": "^4.1.2",
     "copy-webpack-plugin": "^5.0.4",
-    "cross-env": "^5.2.0",
+    "cross-env": "^5.2.1",
     "css-hot-loader": "^1.4.4",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
@@ -82,11 +81,11 @@
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^6.2.2",
-    "eslint-config-prettier": "^6.1.0",
+    "eslint": "^6.3.0",
+    "eslint-config-prettier": "^6.2.0",
     "eslint-config-react-app": "^5.0.1",
     "eslint-loader": "3.0.0",
-    "eslint-plugin-flowtype": "4.2.0",
+    "eslint-plugin-flowtype": "4.3.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
@@ -98,12 +97,11 @@
     "html-loader": "^0.5.5",
     "html-minifier": "^4.0.0",
     "html-webpack-harddisk-plugin": "^1.0.1",
-    "html-webpack-include-assets-plugin": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^5.0.0",
+    "image-webpack-loader": "^6.0.0",
     "jest": "^24.9.0",
     "jest-cli": "^24.9.0",
-    "jest-enzyme": "^7.1.0",
+    "jest-enzyme": "^7.1.1",
     "jest-localstorage-mock": "^2.4.0",
     "mini-css-extract-plugin": "^0.8.0",
     "mkdirp": "^0.5.1",
@@ -117,7 +115,7 @@
     "react-hot-loader": "^4.12.12",
     "request": "^2.88.0",
     "rimraf": "^3.0.0",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^8.0.0",
     "source-map-explorer": "^2.0.1",
     "source-map-support": "^0.5.13",
     "stats-webpack-plugin": "^0.7.0",
@@ -130,24 +128,24 @@
     "tslib": "^1.10.0",
     "typeface-muli": "0.0.71",
     "typesafe-actions": "^4.4.2",
-    "typescript": "^3.5.3",
+    "typescript": "^3.6.2",
     "url-loader": "^2.1.0",
     "utility-types": "^3.7.0",
-    "webpack": "^4.39.2",
+    "webpack": "^4.39.3",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.7",
-    "webpack-dev-middleware": "^3.7.0",
+    "webpack-dev-middleware": "^3.7.1",
     "webpack-dev-server": "^3.8.0",
     "webpack-manifest-plugin": "^2.0.4",
-    "webpack-merge": "^4.2.1",
+    "webpack-merge": "^4.2.2",
     "webpack-pwa-manifest": "^4.0.0",
     "with-default-props": "^0.2.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@emotion/core": "^10.0.16",
-    "@emotion/styled": "^10.0.15",
-    "@material-ui/core": "^4.3.3",
+    "@emotion/core": "^10.0.17",
+    "@emotion/styled": "^10.0.17",
+    "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.2.1",
     "@sindresorhus/is": "^1.0.0",
     "camelcase-keys": "^6.0.1",
@@ -158,7 +156,7 @@
     "history": "^4.9.0",
     "io-ts": "^2.0.1",
     "io-ts-promise": "^2.0.0",
-    "ky": "^0.12.0",
+    "ky": "^0.13.0",
     "loglevel": "^1.6.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -172,6 +170,7 @@
     "redux-thunk": "^2.3.0",
     "snakecase-keys": "^3.1.0",
     "tslib": "^1.10.0",
+    "use-debounce": "^3.0.1",
     "use-react-router": "^1.0.7",
     "yup": "^0.27.0"
   }
