--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -73,7 +73,9 @@
         "experimentalDecorators": true,           /* Enables experimental support for ES7 decorators. */
         "emitDecoratorMetadata": true,             /* Enables experimental support for emitting type metadata for decorators. */
 
-        "incremental": true
+        // Incremental build disabled for typescript 3.6 / ts-loader
+        // see when https://github.com/TypeStrong/ts-loader/issues/995
+        "incremental": false
     },
     "include": [
       "./src"
