--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -143,6 +143,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
+    "@chakra-ui/core": "^0.2.6",
     "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.17",
     "@material-ui/core": "^4.4.0",
