Added es-check and fixed corejs 3

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --hot --config webpack.development.js",
     "clean": "rimraf build dist",
     "typecheck": "tsc -p . --noEmit",
+    "es-check": "es-check es5 './dist/**/*.js' -v ",
     "format": "prettier --write \"./src/**/*.{ts,tsx,scss,js,json}\"",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
@@ -29,19 +30,19 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.6.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-json-strings": "^7.2.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.2.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
-    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.6.0",
+    "@babel/plugin-transform-runtime": "^7.6.0",
     "@babel/plugin-transform-spread": "^7.2.2",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
-    "@babel/runtime-corejs3": "^7.5.5",
+    "@babel/preset-typescript": "^7.6.0",
+    "@babel/runtime-corejs3": "^7.6.0",
     "@fortawesome/fontawesome-free": "^5.10.2",
     "@gfx/zopfli": "^1.0.14",
     "@hot-loader/react-dom": "^16.9.0",
@@ -81,6 +82,7 @@
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "es-check": "^5.0.0",
     "eslint": "^6.3.0",
     "eslint-config-prettier": "^6.2.0",
     "eslint-config-react-app": "^5.0.1",
@@ -121,7 +123,7 @@
     "stats-webpack-plugin": "^0.7.0",
     "style-loader": "^1.0.0",
     "terser": "^4.2.1",
-    "terser-webpack-plugin": "^1.4.1",
+    "terser-webpack-plugin": "^2.0.1",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
@@ -133,7 +135,7 @@
     "utility-types": "^3.7.0",
     "webpack": "^4.39.3",
     "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-cli": "^3.3.7",
+    "webpack-cli": "^3.3.8",
     "webpack-dev-middleware": "^3.7.1",
     "webpack-dev-server": "^3.8.0",
     "webpack-manifest-plugin": "^2.0.4",
@@ -142,7 +144,7 @@
     "with-default-props": "^0.2.1"
   },
   "dependencies": {
-    "@babel/runtime": "^7.5.5",
+    "@babel/runtime": "^7.6.0",
     "@chakra-ui/core": "^0.2.6",
     "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.17",
@@ -151,14 +153,14 @@
     "@sindresorhus/is": "^1.0.0",
     "camelcase-keys": "^6.0.1",
     "core-js": "3",
-    "date-fns": "^2.0.1",
+    "date-fns": "^2.1.0",
     "final-form": "^4.18.5",
     "fp-ts": "^2.0.5",
     "history": "^4.9.0",
     "io-ts": "^2.0.1",
     "io-ts-promise": "^2.0.0",
     "ky": "^0.13.0",
-    "loglevel": "^1.6.3",
+    "loglevel": "^1.6.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-error-boundary": "^1.2.5",
