Moved away from nestjs, api redone in simple express

--- a/apps/api-nestjs-experiment/package.json
+++ b/apps/api-nestjs-experiment/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bluewind/api",
+  "name": "@bluewind/api-nestjs-experiment",
   "version": "0.0.1",
   "description": "Classroom appplication backend",
   "author": "Vanvelthem Sébastien",
