--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@bluewind/api",
     "version": "0.0.1",
-    "description": "Classroom appplication backend",
+    "description": "Classroom application backend",
     "author": "Vanvelthem Sébastien",
     "license": "AGPL-3.0",
     "private": true,
@@ -31,7 +31,7 @@
         "jsonwebtoken": "^8.5.1",
         "mysql2": "^1.7.0",
         "reflect-metadata": "^0.1.13",
-        "swagger-ui-express": "^4.0.7",
+        "swagger-ui-express": "^4.1.0",
         "ts-money": "^0.4.6",
         "typeorm": "^0.2.18",
         "winston": "^3.2.1"
@@ -53,9 +53,9 @@
         "prettier": "^1.18.2",
         "rimraf": "^3.0.0",
         "sqlite3": "^4.1.0",
-        "ts-jest": "^24.0.2",
+        "ts-jest": "^24.1.0",
         "ts-node": "^8.3.0",
-        "tsconfig-paths": "3.8.0",
+        "tsconfig-paths": "3.9.0",
         "tslint": "^5.20.0",
         "typescript": "^3.6.3",
         "utility-types": "^3.7.0",
