allow any in tests

--- a/apps/web/tsconfig.jest.json
+++ b/apps/web/tsconfig.jest.json
@@ -5,6 +5,7 @@
         "module": "commonjs",
         "allowJs":true,
         "checkJs": false,
+        "noImplicitAny": false,
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "importHelpers": false,
